homelab-gitops/apps/production/pihole/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole
  namespace: homelab
spec:
  type: NodePort
  selector:
    app: pihole
  ports:
    - name: web
      port: 80
      targetPort: 80
      nodePort: 30081
    - name: dns-tcp
      port: 53
      targetPort: 53
      protocol: TCP
      nodePort: 30053
    - name: dns-udp
      port: 53
      targetPort: 53
      protocol: UDP
      nodePort: 30054
